external-crates/move/crates/move-compiler/tests/move_check/typing/binary_bit_xor_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04003]: built-in operation not supported
  ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:8:9
  │
8 │         false ^ true;
  │         ^^^^^
  │         │
  │         Invalid argument to '^'
  │         Found: 'bool'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E04003]: built-in operation not supported
  ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:8:17
  │
8 │         false ^ true;
  │         -----   ^^^^ Invalid argument to '^'
  │         │        
  │         Found: 'bool'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:9:14
  │
9 │         1u64 ^ false;
  │         ---- ^ ----- Found: 'bool'. It is not compatible with the other type.
  │         │    │  
  │         │    Incompatible arguments to '^'
  │         Found: 'u64'. It is not compatible with the other type.

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:10:9
   │
10 │         false ^ 1u64;
   │         ^^^^^
   │         │
   │         Invalid argument to '^'
   │         Found: 'bool'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:10:15
   │
10 │         false ^ 1u64;
   │         ----- ^ ---- Found: 'u64'. It is not compatible with the other type.
   │         │     │  
   │         │     Incompatible arguments to '^'
   │         Found: 'bool'. It is not compatible with the other type.

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:10:17
   │
10 │         false ^ 1u64;
   │         -----   ^^^^ Invalid argument to '^'
   │         │        
   │         Found: 'bool'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:11:9
   │
11 │         @0x0 ^ @0x1;
   │         ^^^^
   │         │
   │         Invalid argument to '^'
   │         Found: 'address'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:11:16
   │
11 │         @0x0 ^ @0x1;
   │         ----   ^^^^ Invalid argument to '^'
   │         │       
   │         Found: 'address'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:12:17
   │
12 │         (0: u8) ^ (1: u128);
   │             --  ^     ---- Found: 'u128'. It is not compatible with the other type.
   │             │   │      
   │             │   Incompatible arguments to '^'
   │             Found: 'u8'. It is not compatible with the other type.

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:13:9
   │
 7 │     fun t0(r: R, s: S) {
   │               - Found: '0x8675309::M::R'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'
   ·
13 │         r ^ r;
   │         ^ Invalid argument to '^'

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:13:9
   │
 3 │     struct R {
   │            - To satisfy the constraint, the 'drop' ability would need to be added here
   ·
 7 │     fun t0(r: R, s: S) {
   │               - The type '0x8675309::M::R' does not have the ability 'drop'
   ·
13 │         r ^ r;
   │         ^^^^^ Cannot ignore values without the 'drop' ability. The value must be used

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:13:13
   │
 7 │     fun t0(r: R, s: S) {
   │               - Found: '0x8675309::M::R'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'
   ·
13 │         r ^ r;
   │             ^ Invalid argument to '^'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:14:9
   │
 7 │     fun t0(r: R, s: S) {
   │                     - Found: '0x8675309::M::S'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'
   ·
14 │         s ^ s;
   │         ^ Invalid argument to '^'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:14:13
   │
 7 │     fun t0(r: R, s: S) {
   │                     - Found: '0x8675309::M::S'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'
   ·
14 │         s ^ s;
   │             ^ Invalid argument to '^'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:15:9
   │
15 │         1u64 ^ false ^ @0x0 ^ 0u64;
   │         ^^^^^^^^^^^^^^^^^^^
   │         │              │
   │         │              Found: 'address'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'
   │         Invalid argument to '^'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:15:14
   │
15 │         1u64 ^ false ^ @0x0 ^ 0u64;
   │         ---- ^ ----- Found: 'bool'. It is not compatible with the other type.
   │         │    │  
   │         │    Incompatible arguments to '^'
   │         Found: 'u64'. It is not compatible with the other type.

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:15:29
   │
15 │         1u64 ^ false ^ @0x0 ^ 0u64;
   │                        ---- ^ ---- Found: 'u64'. It is not compatible with the other type.
   │                        │    │  
   │                        │    Incompatible arguments to '^'
   │                        Found: 'address'. It is not compatible with the other type.

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:15:31
   │
15 │         1u64 ^ false ^ @0x0 ^ 0u64;
   │                        ----   ^^^^ Invalid argument to '^'
   │                        │       
   │                        Found: 'address'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:16:9
   │
16 │         () ^ ();
   │         ^^
   │         │
   │         Invalid argument to '^'
   │         Found: '()'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:16:14
   │
16 │         () ^ ();
   │         --   ^^ Invalid argument to '^'
   │         │     
   │         Found: '()'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:17:14
   │
17 │         1u64 ^ ();
   │         ---- ^ -- Found: '()'. It is not compatible with the other type.
   │         │    │  
   │         │    Incompatible arguments to '^'
   │         Found: 'u64'. It is not compatible with the other type.

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:18:9
   │
18 │         (0u64, 1u64) ^ (0u64, 1u64, 2u64);
   │         ^^^^^^^^^^^^
   │         │
   │         Invalid argument to '^'
   │         Found: '(u64, u64)'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:18:22
   │
18 │         (0u64, 1u64) ^ (0u64, 1u64, 2u64);
   │         ------------ ^ ------------------ Found expression list of length 3: '(u64, u64, u64)'. It is not compatible with the other type of length 2.
   │         │            │  
   │         │            Incompatible arguments to '^'
   │         Found expression list of length 2: '(u64, u64)'. It is not compatible with the other type of length 3.

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:18:24
   │
18 │         (0u64, 1u64) ^ (0u64, 1u64, 2u64);
   │         ------------   ^^^^^^^^^^^^^^^^^^ Invalid argument to '^'
   │         │               
   │         Found: '(u64, u64)'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:19:9
   │
19 │         (1, 2) ^ (0u64, 1u64);
   │         ^^^^^^
   │         │
   │         Invalid argument to '^'
   │         Found: '(u64, u64)'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_bit_xor_invalid.move:19:18
   │
19 │         (1, 2) ^ (0u64, 1u64);
   │         ------   ^^^^^^^^^^^^ Invalid argument to '^'
   │         │         
   │         Found: '(u64, u64)'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'
